--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,7 @@
         app:cardCornerRadius="@dimen/margin_16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-      >
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -62,6 +61,7 @@
                 android:hint="نام کاربری">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/userNameEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
