--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -66,6 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@drawable/option_background"
             android:gravity="center"
             android:text="OptionOne"
             android:textColor="@color/black"
@@ -76,6 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:background="@drawable/option_background"
             android:gravity="center"
             android:text="OptionTwo"
             android:textColor="@color/black"
@@ -86,6 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:background="@drawable/option_background"
             android:gravity="center"
             android:text="OptionThree"
             android:textColor="@color/black"
@@ -96,6 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:background="@drawable/option_background"
             android:gravity="center"
             android:text="OptionFour"
             android:textColor="@color/black"
