--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFAE1717</color>
-    <color name="textcolor">#3F51B5</color>
+    <color name="white">#FFFFFF</color>
 </resources>
